Change to JDK11